06-deploying-demo-application/client-react/Service.yaml
apiVersion: v1
kind: Service 
metadata:
  name: client-react
  namespace: demo-app
spec:
  selector:
    app: client-react
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
